openmolar (0.3.6+bzr0814-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 25 Apr 2013 23:01:17 +0100


openmolar (0.3.5+bzr0813-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 25 Apr 2013 00:28:05 +0100


openmolar (0.3.5+bzr0812-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 25 Apr 2013 00:01:28 +0100


openmolar (0.3.4+bzr0807-1~__DIST__0) __DIST__; urgency=low

  * rebuild

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 17 Apr 2013 21:16:10 +0100


openmolar (0.3.4+bzr0807-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 17 Apr 2013 21:00:13 +0100


openmolar (0.3.3+bzr0805-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 04 Mar 2013 11:09:10 +0000


openmolar (0.3.2+bzr0804-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 01 Mar 2013 13:35:31 +0000


openmolar (0.3.2+bzr0802-1~__DIST__0) __DIST__; urgency=low

  * upstream tweaks

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 28 Feb 2013 23:20:39 +0000


openmolar (0.3.2+bzr0799-0~__DIST__0) __DIST__; urgency=low

  * bug fixes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 04 Feb 2013 12:24:01 +0000


openmolar (0.3.2+bzr0798-0~__DIST__0) __DIST__; urgency=low

  * upstream release (invokes a schema change)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 02 Feb 2013 21:39:33 +0000


openmolar (0.3.1+bzr0776-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sun, 28 Oct 2012 19:59:40 +0000


openmolar (0.3.1+bzr0775-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 26 Oct 2012 01:32:11 +0100

