@@ -1,3 +1,10 @@
+openmolar (0.3.7+bzr0815-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 30 Apr 2013 16:44:16 +0100
+
+
 openmolar (0.3.6+bzr0814-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release
